[package]
name = "caver"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { features = ["disk"], default-features = false, version = "0.31.3" }
ntfs-reader = "0.4.1"
runas = "1.2.0"
serde = { version = "1.0.209", features = ["derive"] }
bincode = "1.3.3"
time = "0.3.36"
rayon = "1.10.0"
