[package]
name = "caver"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = { features = ["disk"], default-features = false, version = "0.31.4" }
ntfs-reader = "0.4.1"
runas = "1.2.0"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
rayon = "1.10.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
